traefik-ingress/cloud-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-server-ingress
  namespace: monitoring
spec:
  rules:
    - host: cloud-server.gpg123.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud-server
                port:
                  name: http
