traefik-ingress/prometheus-node-exporter.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-node-exporter
  namespace: monitoring
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-prometheus-node-exporter
                port:
                  number: 9100
