traefik-ingress/skywalking-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skywalking-server-ingress
  namespace: skywalking
spec:
  rules:
    - host: skywalking.server.gpg123.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skywalking-ui
                port:
                  number: 8080
