traefik-ingress/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: monitoring
spec:
  rules:
    - host: traefik.gpg123.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-ecs
                port:
                  name: traefik
